--- a/Pre-Entregas/02-Segunda-Pre-Entrega/package.json
+++ b/Pre-Entregas/02-Segunda-Pre-Entrega/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.6.2"
   },
   "name": "01-first-practice",
   "version": "1.0.0",
