--- a/Practicas-Integradoras/01-Primera-Practica/package.json
+++ b/Practicas-Integradoras/01-Primera-Practica/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "mongoose": "^7.2.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.6.2"
   },
   "name": "01-first-practice",
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "module",
-  "devDependencies": {},
   "scripts": {
     "start": "node .",
     "dev": "nodemon ."
