--- a/Pre-Entregas/02-Segunda-Pre-Entrega/package.json
+++ b/Pre-Entregas/02-Segunda-Pre-Entrega/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "session-file-store": "^1.5.0",
     "express-handlebars": "^7.0.7",
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
     "socket.io": "^4.6.2"
   },
-  "name": "01-first-practice",
+  "name": "02-first-practice",
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "module",
