--- a/Pre-Entregas/02-Segunda-Pre-Entrega/package.json
+++ b/Pre-Entregas/02-Segunda-Pre-Entrega/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.3",
-    "session-file-store": "^1.5.0",
+    "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.6.2"
   },
   "name": "02-first-practice",
