--- a/App/package.json
+++ b/App/package.json
@@ -15,7 +15,9 @@
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "winston": "^3.10.0",
+    "winston-mongodb": "^5.1.1"
   },
   "name": "02-first-practice",
   "version": "1.0.0",
