--- a/App/package.json
+++ b/App/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
