--- a/App/package.json
+++ b/App/package.json
@@ -9,6 +9,7 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "jest": "^29.6.4",
+    "luxon": "^3.4.3",
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
