--- a/App/package.json
+++ b/App/package.json
@@ -8,7 +8,6 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
-    "jest": "^29.6.4",
     "luxon": "^3.4.3",
     "mongoose": "^7.2.1",
     "mongoose-paginate-v2": "^1.7.1",
@@ -20,7 +19,6 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.6.2",
-    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.10.0",
@@ -37,5 +35,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
+  }
 }
