--- a/App/package.json
+++ b/App/package.json
@@ -30,7 +30,8 @@
   "type": "module",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "tester": "set NODE_OPTIONS=--experimental-vm-modules && npx jest /src/test/app/app.test.js"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +39,7 @@
   "description": "",
   "devDependencies": {
     "chai": "^4.3.8",
+    "jest": "^29.7.0",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3"
   }
